# benchexec

./: .appveyor.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .project  .pydevproject  .report-coverage.sh  .travis-setup.sh  .travis.yml  .zenodo.json  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  README_P4.md  REUSE.toml  benchexec.py  benchmark-1.0.dtd  benchmark-result.dtd  benchmark.dtd  consequence.py  coveritest.py  ip_table1.json  package-lock.json  pyproject.toml  pytest.ini  release.sh  result-1.2.dtd  runexec.py  runexecutor.py  setup.cfg  setup.py  table-generator.dtd  table-generator.py  veriabs.py
.github/: dependabot.yml
.github/workflows/: black.yml  javascript.yml  reuse.yml  ruff.yml
.reuse/: dep5
.reuse/templates/: header.jinja2
LICENSES/: LicenseRef-BSD-3-Clause-CMU.txt
benchexec/: __init__.py  __main__.py  baseexecutor.py  benchexec.py  brick.py  cgroups.py  cgroupsv1.py  cgroupsv2.py  check_cgroups.py  container.py  containerexecutor.py  containerized_tool.py  filehierarchylimit.py  filewriter.py  intel_cpu_energy.py  libc.py  localexecution.py  model.py  oomhandler.py  outputhandler.py  p4_run_setup.py  p4execution.py  p4executor.py  p4runexecutor.py  pqos.py  pytest_analyze_run_result.py  pytest_benchmark_definition.py  pytest_cgroups.py  pytest_core_assignment.py  pytest_pqos.py  pytest_result.py  resources.py  result.py  runexecutor.py  seccomp.py  systeminfo.py  test_BenchExec_assumptions.c  test_analyze_run_result.py  test_benchexec_integration.py  test_benchmark_definition.py  (+16 more)
benchexec/tablegenerator/: TODO_ajax_loadcontent.js  __init__.py  columns.py  conftest.py  htmltable.py  statistics.py  statisticstex.py  template.csv  template.html  template.not_extracted.html  template_react.html  test_columns.py  test_href_substitution.py  test_numberformat.py  test_statvalue.py  test_util.py  textable.py  util.py
benchexec/test_integration/: __init__.py  benchmark-example-rand.xml  benchmark-example-true.xml  tags-many-names-all.xml  tags-many-names-duplicate-tasks.xml  tags-many-names-partial-rundefinition.xml  tags-many-names-partial-tasks.xml  tags-single-names-all.xml  tags-single-names-none.xml  tags-single-names-rundefinition.xml  tags-single-names-tasks.xml
benchexec/tools/: 2ls.py  FuSeBMC.py  Wit4JBMC.py  Wit4Java.py  WitForJBMC.py  abc.py  acsar.py  afltc.py  aise.py  aprove.py  avr.py  blast.py  brick.py  btor2c.py  btormc.py  bubaak.py  cake_lpr.py  cake_pb_cnf.py  calculatepi.py  cascade.py  cbmc-path.py  cbmc.py  ceagle.py  ceagle_absref.py  cetfuzz.py  civl.py  cmaesfuzz.py  coastal.py  coccinelle.py  concurrentwitness2test.py  condtest-annotator.py  condtest-extractor.py  condtest-instrumenter.py  condtest-pruner.py  condtest.py  condtesttools.py  consequence.py  cooperace.py  coveriteam-verifier-validator.py  coveriteam.py  (+206 more)
bundling_investigation/: .gitignore  README.md  build_bundle.sh  runexec.spec  test_nuitka.sh  test_pyinstaller.sh
contrib/: .gitignore  README.md  __init__.py  aws-benchmark.py  benchmark.py  convert_xml_to_csv.sh  create_yaml_files.py  mergeBenchmarkSets.py  p4-benchmark-tofino.py  p4-benchmark.py  serveFileFromZIP.php  slurm-benchmark.py  statistics-tex.py  test_mergeBenchmarkSets.py  vcloud-benchmark.py
contrib/aws/: awsexecutor.py
contrib/benchmark/: aws.py
contrib/p4/: Counter.py  Makefile  README.md  README_P4.md  __init__.py  counter.py  network_config.json  network_config.json.license  p4-test-tool.py  p4_run_setup.py  p4execution.py  test.json
contrib/p4_files/: README.md  constants.py  counter.py  helper_functions.py  network_config.json  network_config_old.json  network_illustrator.py  p4_run_setup.py  p4execution.py  p4executiontofino.py
contrib/plots/: .gitignore  README.md  example-tool1.results.xml.bz2  example-tool2.results.xml.bz2  generate-plots.sh  quantile-generator.py  quantile-score.gp  quantile-score.tex  quantile-split.gp  quantile.gp  quantile.tex  scatter-counted.gp  scatter-counted.tex  scatter.gp  scatter.png.license  scatter.tex  scatter.xml
contrib/slurm/: README-old.md  README.md  __init__.py  arrayexecutor.py  slurmexecutor.py  utils.py
contrib/test_integration/: __init__.py  empty.xml.bz2
contrib/test_mergeBenchmarkSets/: __init__.py  mock_results.xml  mock_witness_1.xml  mock_witness_2.xml  (+1 more)
debian/: NEWS  README.Debian  benchexec-cgroup.service  benchexec-cgroup2.service  benchexec.examples  benchexec.postinst  benchexec.postrm  changelog  control  copyright  docs  install  rules  watch
doc/: DEVELOPMENT.md  INDEX.md  INSTALL.md  benchexec-in-container.md  benchexec.md  benchmark-example-calculatepi.xml  benchmark-example-cbmc.xml  benchmark-example-multiproperty-composite.xml  benchmark-example-multiproperty-correct.xml  benchmark-example-multiproperty-wrong.xml  benchmark-example-rand.xml  benchmark-example-true.xml  benchmark-result.dtd  benchmark.dtd  benchmark.xml  benchmarking.md  bundling.md  container.md  dummy_false-unreach-call.c.yml  dummy_false-unreach-call.yml  johanP4Test.XML  johanTest.XML  multiproperty.md  properties.md  python-api.md  quickstart.md  resources.md  result.dtd  run-results.md  runexec.md  separate-user.md  simpleP4Test.XML  table-generator-basic.xml  table-generator-example.xml  table-generator.dtd  table-generator.md  table-generator.xml  table.dtd  task-definition-example.yml  task-template-example.yml  (+1 more)
example-table/: predicateAnalysis.2015-12-11_1059.results.ABEl.Simple.xml  svcomp-simple-cbmc-cpachecker.diff.csv  svcomp-simple-cbmc-cpachecker.diff.html  svcomp-simple-cbmc-cpachecker.table.csv  svcomp-simple-cbmc-cpachecker.table.html  svcomp-simple-cbmc-cpachecker.xml
pqos/: setup.py
test/: Dockerfile.python-2.7  Dockerfile.python-3.10  Dockerfile.python-3.11  Dockerfile.python-3.12  Dockerfile.python-3.13  Dockerfile.python-3.14  Dockerfile.python-3.2  Dockerfile.python-3.3  Dockerfile.python-3.4  Dockerfile.python-3.5  Dockerfile.python-3.6  Dockerfile.python-3.7  Dockerfile.python-3.8  Dockerfile.python-3.9  for_each_of_my_cgroups.sh  setup_cgroupsv2_in_container.sh
(+707 files in other folders)
