# This file is part of BenchExec, a framework for reliable benchmarking:
# https://github.com/sosy-lab/benchexec
#
# SPDX-FileCopyrightText: 2007-2020 Dirk Beyer <https://www.sosy-lab.org>
#
# SPDX-License-Identifier: Apache-2.0

[metadata]
license_files =
  LICENSES/Apache-2.0.txt
  LICENSES/BSD-3-Clause.txt
  LICENSES/CC-BY-4.0.txt
  LICENSES/ISC.txt
  LICENSES/LicenseRef-BSD-3-Clause-CMU.txt
  LICENSES/MIT.txt

# Necessary for nose since Python 3.8 to find the tests on Windows
[nosetests]
traverse-namespace=1
