# This file is part of BenchExec, a framework for reliable benchmarking:
# https://github.com/sosy-lab/benchexec
#
# SPDX-FileCopyrightText: 2007-2020 Dirk Beyer <https://www.sosy-lab.org>
#
# SPDX-License-Identifier: Apache-2.0

# Documentation of this file:
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# https://docs.python.org/3/distutils/configfile.html
#
# Other links for documentation on how to build and use Python packages:
# https://packaging.python.org/
# https://docs.python.org/3/distutils/index.html
# https://snarky.ca/what-the-heck-is-pyproject-toml/
# http://www.jeffknupp.com/blog/2013/08/16/open-sourcing-a-python-project-the-right-way/

# The definitions of this file could be moved to pyproject.toml since setuptools 61.0.0.
# However, when we build our Debian package setuptools is installed from the
# distribution package, which is older than 61.0.0 even on Ubuntu 22.04.
# So we keep setup.cfg until our Debian package no longer needs it.
# Conversion to pyproject.toml can then be for example with https://pypi.org/project/ini2toml/

[metadata]
name = BenchExec
version = attr: benchexec.__version__
author = Dirk Beyer
description = A Framework for Reliable Benchmarking and Resource Measurement.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sosy-lab/benchexec/
project_urls =
  Documentation = https://github.com/sosy-lab/benchexec/blob/main/doc/INDEX.md
  Changelog = https://github.com/sosy-lab/benchexec/blob/main/CHANGELOG.md
  Issue Tracker = https://github.com/sosy-lab/benchexec/issues
keywords =
  benchmarking
  resource measurement
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  License :: OSI Approved :: Apache Software License
  License :: OSI Approved :: BSD License
  License :: OSI Approved :: ISC License (ISCL)
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux
  Programming Language :: Python :: 3 :: Only
  Topic :: System :: Benchmark
platforms = Linux
license = Apache-2.0 AND BSD-3-Clause AND CC-BY-4.0 AND MIT AND ISC AND LicenseRef-BSD-3-Clause-CMU
license_files =
  LICENSES/Apache-2.0.txt
  LICENSES/BSD-3-Clause.txt
  LICENSES/CC-BY-4.0.txt
  LICENSES/ISC.txt
  LICENSES/LicenseRef-BSD-3-Clause-CMU.txt
  LICENSES/MIT.txt

[options]
packages = benchexec, benchexec.tablegenerator, benchexec.tools
install_requires =
  PyYAML >= 3.12
python_requires = >= 3.8
zip_safe = True

[options.extras_require]
dev =
  %(systemd)s
  pytest
  lxml
systemd =
  pystemd >= 0.7.0; platform_system != 'Windows'

[options.entry_points]
console_scripts =
  runexec = benchexec.runexecutor:main
  containerexec = benchexec.containerexecutor:main
  benchexec = benchexec.benchexec:main
  table-generator = benchexec.tablegenerator:main

[options.package_data]
benchexec.tablegenerator =
  react-table/build/*.min.js
  react-table/build/*.min.css

